--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It's web application for managing a spaceship travel system to Moon, Mars, and Jupiter.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development nodemon ./server/index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,15 +15,17 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.10.0",
-    "sequelize": "^6.37.3"
+    "mysql2": "^3.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
