--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "It's web application for managing a spaceship travel system to Moon, Mars, and Jupiter.",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon ./server/index.ts"
+    "dev": "cross-env NODE_ENV=development nodemon ./server/index.ts",
+    "start": "cross-env NODE_ENV=production node ./dist/server/index.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,13 +23,14 @@
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.10.0"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.9",
+    "@types/mysql": "^2.15.26",
     "@types/node": "^20.14.2",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
