--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon ./server/index.ts",
     "start": "cross-env NODE_ENV=production node ./dist/server/index.js",
+    "db:build": "ts-node ./server/database/build.ts",
     "build": "tsc"
   },
   "repository": {
@@ -23,7 +24,8 @@
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
