--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "typeRoots": ["./server/types", "./node_modules/@types"]
+    "skipLibCheck": true
   },
   "include": ["./server"]
 }
