--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon ./server/index.ts",
     "start": "cross-env NODE_ENV=production node ./dist/server/index.js",
-    "db:build": "ts-node ./server/database/build.ts",
+    "db:build": "cross-env NODE_ENV=development ts-node ./server/database/build.ts",
+    "db:build-prod": "cross-env NODE_ENV=production ts-node ./server/database/build.ts",
     "build": "tsc"
   },
   "repository": {
